video is converted from webm to mp4. video timestamp overlay is added for better debugging

--- a/docker/playwright-service/config/Dockerfile
+++ b/docker/playwright-service/config/Dockerfile
@@ -11,7 +11,8 @@ RUN apt-get update && \
         gnupg \
         iputils-ping \
         iproute2 \
-        ca-certificates && \
+        ca-certificates \
+        ffmpeg && \
     curl -fsSLo /usr/share/keyrings/mullvad-keyring.asc https://repository.mullvad.net/deb/mullvad-keyring.asc && \
     echo "deb [signed-by=/usr/share/keyrings/mullvad-keyring.asc arch=$(dpkg --print-architecture)] https://repository.mullvad.net/deb/stable stable main" > /etc/apt/sources.list.d/mullvad.list && \
     apt-get update && \
