readme updated with first time user guide

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # The .env file is ignored by git - safe to add secrets there
 
 # ==================== Stripe Configuration ====================
-# Stripe Test API Key (REQUIRED for time advancement tests)
+# Stripe Test API Key (REQUIRED for refund and time advancement tests)
 # Get your test key from: https://dashboard.stripe.com/test/apikeys
 STRIPE_TEST_API_KEY=sk_test_YOUR_STRIPE_KEY_HERE
 
